# viorina

./: .gitignore  README.md  main.py  pyproject.toml
viorina/: __init__.py
viorina/descriptors/: descriptor_basics.py  float_type.py  integer_type.py  integers.py  text_type.py
viorina/payload_factory/: __init__.py  viorina_base.py
