[project]
name = "viorina"
version = "0.1.0"
description = "Light-weight minimal API Fuzzer in Python"

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "regex-generate-py>=2023.3.7",
]

# For working in Helix Editor on my Linux laptop
[tool.pyrefly]
python-interpreter = "./.venv/bin/python"
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]
